# quant-finance-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PERFORMANCE.md  README.md
.github/workflows/: ci.yml
apps/containers_demo/: CMakeLists.txt  main.cpp
apps/geometry_demo/: CMakeLists.txt  main.cpp
apps/option_pricing_demo/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  quant_benchmarks.cpp
libs/containers/: CMakeLists.txt
libs/containers/include/containers/: Array.hpp  ArrayException.hpp  NumericArray.hpp  Stack.hpp  StackException.hpp
libs/geometry/: CMakeLists.txt
libs/geometry/include/geometry/: Circle.hpp  Line.hpp  Point.hpp  Shape.hpp
libs/geometry/src/: Circle.cpp  Line.cpp  Point.cpp  Shape.cpp
libs/quant/: CMakeLists.txt
libs/quant/include/quant/: BatchPricer.hpp  EuropeanOption.hpp  MatrixPricer.hpp  OptionTypes.hpp
libs/quant/src/: BatchPricer.cpp  EuropeanOption.cpp  MatrixPricer.cpp
tests/: CMakeLists.txt  batch_pricer_tests.cpp  containers_tests.cpp  geometry_tests.cpp  quant_tests.cpp
